--- a/documentation/index.html
+++ b/documentation/index.html
@@ -16,6 +16,6 @@
       coverpage: true,
     }
   </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
