--- a/documentation/index.html
+++ b/documentation/index.html
@@ -6,16 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Documentation for Brilliant Web-to-Lead for Salesforce">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="https:////unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+  <link rel="stylesheet" href="https://brilliantplugins.info/docsify/common.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="app">Please wait...</div>
   <script>
-    window.$docsify = {
-      loadNavbar: true,
-      coverpage: true,
-    }
+    window.docsifyCustomConfig = {}
   </script>
-  <script src="https:////unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
+  <script src="https://brilliantplugins.info/docsify/common.js"></script>
+  </style>
 </body>
 </html>
